# s21_BrickGame_2

./: README.md
src/: BrickGame  CMakeLists.txt  Makefile  README.md  game_controller.h  game_params.cpp  game_params.h  main.cpp
src/brick_game/snake/: Makefile  a.out  game_params.h  main.cpp  snake_controller.cpp  snake_controller.h  snake_game.cpp  snake_game.h  snake_view.cpp  snake_view.h
src/brick_game/tetris/: tetris_game.cpp  tetris_game.h
src/gui/cli/: cli_view.cpp  cli_view.h
src/gui/desktop/: desktop_view.cpp  desktop_view.h  desktop_view.ui
src/test/: test.cpp  test.h  test_bin
